# compute-app

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  code.sh  compute-plan.md  cost-estimates.md  current-issues-report-for-codex-20-april.md  install.ps1  install.sh  tech-research.md
.github/workflows/: release.yml
Branding-Guide/: design-language.md
ascii-logos/: 01-block-heavy.txt  02-thin-lines.txt  03-spaced-caps.txt  04-shadow-block.txt  05-minimal-mono.txt  06-outline.txt  07-half-block.txt  08-stacked.txt  09-dots.txt  10-recommended.txt  11-geometric.txt  12-wide-block.txt  13-underline.txt  14-bracket.txt  15-small-caps.txt  16-gradient-full.txt  17-gradient-glow.txt  18-gradient-compact.txt  19-gradient-heavy.txt  20-gradient-slim.txt  21-cursive.txt  22-ansi-shadow.txt  23-colossal.txt  24-doom.txt  25-big-money.txt  26-larry3d.txt  27-roman.txt  28-sans-clean.txt  29-sans-rounded.txt  30-sans-light.txt  31-sans-medium.txt  32-sans-spaced.txt
crates/compute-cli/: Cargo.toml  build.rs
crates/compute-cli/src/: cli.rs  main.rs  updater.rs
crates/compute-cli/src/tui/: app.rs  dashboard.rs  globe.rs  mod.rs  onboarding.rs  splash.rs  theme.rs  worldmap.rs
crates/compute-daemon/: Cargo.toml
crates/compute-daemon/src/: benchmark.rs  config.rs  container.rs  daemon.rs  error.rs  hardware.rs  idle.rs  lib.rs  logging.rs  metrics.rs  prototype_chain.rs  real_chain.rs  relay.rs  runtime.rs  service.rs  stage_runtime.rs
crates/compute-daemon/src/inference/: engine.rs  ggml_graph_runtime.rs  ggml_runtime.rs  ggml_stage_executor.rs  ggml_stage_manifest.rs  ggml_stage_plan.rs  ggml_stage_worker.rs  llama_stage_gateway.rs  llamacpp.rs  manager.rs  mlx.rs  mod.rs  real_forward_artifact.rs  real_forward_provider.rs  real_forward_provider_ggml.rs  shard.rs  stage_acceleration.rs  stage_artifacts.rs  stage_backend.rs  throttle.rs
crates/compute-daemon/tests/: stage_prototype_integration.rs
crates/compute-network/: Cargo.toml
crates/compute-network/src/: client.rs  lib.rs  models.rs  pipeline.rs  stage.rs  supabase.rs
crates/compute-network/src/transport/: identity.rs  mod.rs  node.rs  protocol.rs
crates/compute-network/tests/: pipeline_integration.rs
crates/compute-solana/: Cargo.toml
crates/compute-solana/src/: lib.rs  wallet.rs
crates/llama-stage-backend/: Cargo.toml  build.rs
crates/llama-stage-backend/src/: lib.rs
crates/stage-forward-lab/: Cargo.toml
crates/stage-forward-lab/src/: gguf.rs  lib.rs  prompt_suite.rs  quants.rs  real_forward.rs  real_math.rs  tokenizer.rs
docs/: adr-0001-multi-node-v1-stage-based-pipeline.md  cnft-zk-rewards-plan.md  dynamic-pricing-plan.md  llama-stage-gateway-ops-april-2026.md  multi-node-v1-design-april-2026.md  multi-node-v1-implementation-plan-april-2026.md  network-architecture-strategy-april-2026.md  pipeline-shard-planning.md  real-forward-production-boundary-audit-april-2026.md  reliability-pass-april-2026.md  research-findings-april-2026.md  secure-node-attestation-backburner-april-2026.md  stabilization-review-april-2026.md  stage-acceleration-architecture-april-2026.md  stage-backend-feasibility-april-2026.md  stage-prototype-lan-test.md  stage-real-forward-breakthroughs-and-dense-porting-guide-april-2026.md  stage-real-forward-handoff-april-2026.md  technical-overview.md  v0.4.2-omlx-integration-spec.md
orchestrator/: .env.example  .gitignore  package-lock.json  package.json
orchestrator/src/: index.ts
orchestrator/src/middleware/: auth.ts  enterpriseAuth.ts  walletAuth.ts
orchestrator/src/routes/: apikeys.ts  auth.ts  billing.ts  completions.ts  nodes.ts  pipelines.ts  rewards.ts  webhooks.ts  ws.ts
orchestrator/src/services/: apikeys.ts  billing.ts  crypto-deposits.ts  db.ts  nodes.ts  pipelines.ts  pricefeed.ts  relay.ts  rewards.ts  scheduler.ts  solana.ts  stripe.ts
orchestrator/src/types/: node.ts  pipeline.ts
solana-program/: Anchor.toml  DEPLOYMENT.md
solana-program/programs/solana-program/: Cargo.toml
solana-program/programs/solana-program/src/: lib.rs
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260412000001_add_placement_fields_to_nodes.sql  20260416000002_add_stage_backend_kind_to_nodes.sql  20260424000001_lock_down_public_access.sql  20260424000002_tokenomics_reward_credits.sql  20260424000003_node_runtime_optimization.sql  20260425000001_browser_node_keys.sql  20260426000001_reward_aggregate_rpcs.sql  20260426000002_dashboard_chat_history.sql
