[package]
name = "compute-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "compute"
path = "src/main.rs"

[dependencies]
compute-daemon = { workspace = true }
compute-network = { workspace = true }
compute-solana = { workspace = true }

# CLI
clap = { workspace = true }

# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }

# Async
tokio = { workspace = true }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
base64 = "0.22"

# System info
sysinfo = { workspace = true }

# Directories
dirs = { workspace = true }
