[package]
name = "compute-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# System info
sysinfo = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Docker
bollard = { workspace = true }
futures-util = "0.3"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Directories
dirs = { workspace = true }

# Unix process management
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
