[package]
name = "compute-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
base64 = "0.22"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# System info
sysinfo = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Docker
bollard = { workspace = true }
futures-util = "0.3"

# WebSocket
tokio-tungstenite = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time
chrono = "0.4"

# Internal crates
compute-network = { workspace = true }
llama-stage-backend = { workspace = true }
stage-forward-lab = { workspace = true }

# Directories
dirs = { workspace = true }
if-addrs = { workspace = true }

# Utilities
shellexpand = "3"
libloading = "0.8"

# Unix process management
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
