[package]
name = "compute-network"
version.workspace = true
edition.workspace = true

[dependencies]
# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time
chrono = "0.4"

# QUIC transport
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
